# desi-y3-hsc

./: .gitignore  README.md  env-desi.yml  env-splines.yml  pymc_env.yaml  pyproject.toml
cosmic-shear/: job.sh  reanalysis.ipynb
cosmic-shear/chains/: plots.ipynb
cosmic_shear/: corner_utils.py  job.sh  job_0.3_3.sh  job_1_5.sh  job_no_z3.sh  job_no_z4.sh  plots.ipynb  s8.ipynb  s8_comparison.ipynb
data/: README.md
data/bias/: BGS_BRIGHT-21.35_bias.txt  ELG_LOPnotqso_bias.txt  ELGnotqso_bias.txt  LRG_bias.txt  QSO_bias.txt
data/mocs/: hsc_moc1.fits  hsc_moc2.fits  hsc_moc3.fits  hsc_moc4.fits
desi-scripts/: read_mocks.py  runtreecorr_buzzard_nersc.py
legacy/: README.md  autocorr.py  crosscorr.py  jackknife.py
legacy/nb/: bias_modelling.ipynb  desi_sampling.ipynb  distributions.ipynb  inspect_moc.ipynb  merged_results.ipynb  photoz_bias.ipynb
nersc/: batch.sh
paper/cosmic_shear_tex/: main.tex
paper/nz_tex/: main.tex
results/: distributions_1_5_vF.npz  expectations_0.3_3_vF.npz  merged_res_0.3_3_vF.npz  merged_res_1_5_vF.npz  merged_res_norm_0.3_3_vF.npz  nz_res_metadata_0.3_3_vF.json
results/distributions/: README.md
results/n_pk_z/: merged_bins_0.3_3_vF.json  merged_bins_1_5_vF.json  nz_gal_bias_0.3_3_vF.json  nz_gal_bias_1_5_vF.json
results/photoz_bias_splines_0.3_3_vF/: tomo_photoz.npz
results/photoz_bias_splines_1_5_vF/: tomo_photoz.npz
scripts/: randoms.ipynb
scripts/inspect/: crossmatch.ipynb  desi_hsc_footprintmatch.ipynb  desi_sampling.ipynb  inspect_holimocks.ipynb  inspect_moc.ipynb
scripts/makecat/: make_hscy3.py  (+1 more)
(+150 files in other folders)
