[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scripts"
version = "0.1.0"
description = "A Python package for various desi hsc scripts"
authors = [
    { name = "Jean Choppin de Janvry", email = "jean.choppindejanvrydev@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["scripts"]