[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desi-y3-hsc"
version = "0.1.0"
description = "pyproject for the analysis of the cross-correlation between DESI Y3 and HSC and subsequent cosmic shear analysis."
authors = [
    { name = "Jean Choppin de Janvry", email = "jean.choppindejanvrydev@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["src"]